--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#">Our  programs</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact us</a></li>
+                <li><a href="#">Contact us</a></li>
             </ul>
         </nav>
     </header>
