--- a/front-end/home.html
+++ b/front-end/home.html
@@ -67,8 +67,8 @@
 
   <section class="cta">
     <h2>Join Winnei’s Garden today and stay updated on your child’s growth!</h2>
-    <button class="btn">Sign up</button>
-    <button class="btn btn-light">Sign in</button>
+    <a class="btn" href="signup.html"  >Sign up</a>
+    <a class="btn btn-light" href="signin.html"  >Sign in</a>
   </section>
 
 
