--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <h3>Socials</h3>
           <p>join us</p>
           <div class="social-icons">
-            <i class="fa fa-facebook"></i>
+            <i class="fa-facebook"></i>
             <i class="fa fa-instagram"></i>
             <i class="fa fa-times"></i>
             <i class="fa fa-linkedin"></i>
