--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <footer class="footer">
         <div class="footer-left">
           <div class="logo-search">
-            <img src="poodv.png" alt="Pooh logo" class="pooh-logo" />
+            <img src="wini.png" alt="Pooh logo" class="pooh-logo" />
             <input type="text" placeholder="Search anything" class="search-input" />
             <button class="search-btn">➜</button>
           </div>
