linking html pages

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             
                 <li><a href="#">Home</a></li>
                 <li><a href="index.html">About us</a></li>
-                <li><a href="#">Our  programs</a></li>
+                <li><a href="ourProgrammes.html">Our  programs</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact us</a></li>
             </ul>
@@ -41,12 +41,12 @@
     <div class="card" id="about">
       <h3>About us</h3>
       <p>Winnei’s Garden is a specialized childcare center... autism, Down syndrome, speech therapy...</p>
-      <a href="#">Know more...</a>
+      <a href="index.html">Know more...</a>
     </div>
     <div class="card" id="programs">
       <h3>Our Programs</h3>
       <p>Each child is unique, and our programs ensure the right care, guidance, and growth.</p>
-      <a href="#">Explore Programs</a>
+      <a href="ourProgrammes.html">Explore Programs</a>
     </div>
     <div class="card" id="services">
       <h3>Services</h3>
