--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                
                 <li><a href="home.html">Home</a></li>
                 <li><a href="#">About us</a></li>
-                <li><a href="#">Our  programs</a></li>
+                <li><a href="ourProgrammes.html">Our  programs</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact us</a></li>
             </ul>
