--- a/preschol.html
+++ b/preschol.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="index.html">About us</a></li>
-        <li><a href="ourPrograms.html">Our Programs</a></li>
+        <li><a href="ourProgrammes.html">Our Programs</a></li>
         <li><a href="ourServices.html">Services</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
