--- a/specialNeeds.html
+++ b/specialNeeds.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="index.html">About us</a></li>
-        <li><a href="#">Our programs</a></li>
+        <li><a href="ourProgrammes.html">Our programs</a></li>
         <li><a href="ourServices.html">Services</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
