contact us by noufel

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#">About us</a></li>
                 <li><a href="ourProgrammes.html">Our  programs</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
