--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">About us</a></li>
                 <li><a href="ourProgrammes.html">Our  programs</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
