--- a/home.html
+++ b/home.html
@@ -6,34 +6,31 @@
   <title>Winnei's Garden - Home</title>
   <link rel="stylesheet" href="home.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <img src="wini.png"   alt="Logo" class="logo">
-
-            <div id="welcome-message" class="welcome"></div>
-
             <ul>
             
-                <li><a href="#">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="index.html">About us</a></li>
                 <li><a href="ourProgrammes.html">Our  programs</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="contact.html">Contact us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="new.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
 
-
   <section class="hero">
-    <img src="poohv.png" height="300" width="700" alt="Pooh Group" class="hero-img" />
-    
+    <img src="winnie-the-pooh-all-3 1.png" height="300" width="700" alt="Pooh Group" class="hero-img" />
+    <h1  id="text">Welcome <br> to Winnei's garden</h1>
     <p class="slogan">Every Child Deserves to Bloom<br>Winnie winnie poom</p>
   </section>
-<center>
-  <button onclick="goToProfile()" class="profile-button">Mon Profil</button>
-</center>
+
   <section class="intro">
     <div class="intro-box">
       <p>
@@ -62,7 +59,7 @@
         <li>Speech Therapy</li>
         <li>Parent Support</li>
       </ul>
-      <a href="#">View All Services</a>
+      <a href="services.html">View All Services</a>
     </div>
     <div class="card" id="contact">
       <h3>Contact</h3>
@@ -74,14 +71,14 @@
   <section class="cta">
     <h2>Join Winnei’s Garden today and stay updated on your child’s growth!</h2>
     <a class="btn" href="signup.html"  >Sign up</a>
-    <a class="btn btn-light" href="signin.html"  >Sign in</a>
+    <a class="btn btn-light" href="signin.html"  >login</a>
   </section>
 
 
   <footer class="footer">
     <div class="footer-left">
       <div class="logo-search">
-        <img src="wini.png" alt="Pooh logo" class="pooh-logo" />
+        <img src="Group 6.png" alt="Pooh logo" class="pooh-logo" />
         <input type="text" placeholder="Search anything" class="search-input" />
         <button class="search-btn">➜</button>
       </div>
@@ -93,24 +90,24 @@
     </div>
   
     <div class="footer-center">
-      <h3>Services</h3>
+      <h3 id="service"></h3>
     </div>
   
     <div class="footer-contact">
-      <h3>Contact</h3>
-      <p>📍 Algeria/Algiers</p>
-      <p>✉️ Contact@Winnei’sgarden.com</p>
-      <p>📞 +213 673821375</p>
+      <h3 id="sth">Contact</h3>
+      <p><img src="home.png" alt="">   Algeria/Algiers</p>
+      <p><img src="mail.png" alt="">   Contact@Winnei’sgarden.com</p>
+      <p><img src="phone.png" alt="">   +213 673821375</p>
     </div>
   
     <div class="footer-socials">
-      <h3>Socials</h3>
+      <h3 id="service">Socials</h3>
       <p>join us</p>
       <div class="social-icons">
-        <i class="fa fa-facebook"></i>
-        <i class="fa fa-instagram"></i>
-        <i class="fa fa-times"></i>
-        <i class="fa fa-linkedin"></i>
+        <i><img src="Facebook.png" alt=""></i>
+        <i><img src="insta.png" alt=""></i>
+        <i><img src="X.png" alt=""></i>
+        <i><img src="Linked.png" alt=""></i>
       </div>
     </div>
   </footer>
@@ -120,28 +117,5 @@
       <a href="#">Terms & Conditions</a>
     </p>
   </div>
-
-<script>
-  fetch("http://localhost/winnies_garden/profile.php")
-    .then(res => res.json())
-    .then(data => {
-      if (data.status === "success") {
-        document.getElementById("welcome-message").innerText = "Bonjour, " + data.user.name + " 👋";
-        document.getElementById("profile-btn").style.display = "inline-block";
-      } else {
-        document.getElementById("welcome-message").innerText = "Bienvenue Naoufel👋";
-      }
-    })
-    .catch(error => {
-      console.error("Erreur :", error);
-    });
-
-  function goToProfile() {
-    window.location.href = "profile.html";
-  }  
-</script>
-
-
-
 </body>
 </html>
