--- a/new.html
+++ b/new.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="new.css">
 </head>
 <body>
-
     <div class="container">
-      
         <img src="purepng.com-winnie-pooh-tiggerwinnie-poohwinniepoohpooh-bearbearwinnie-the-poohteddy-bearcharacterbook-winnie-the-pooh-1926pooh-corner-1928-1701528660159hqvha.png" alt="Telephone" class="phone-image">
         <div class="form-container">
             <h1>Contact Us</h1>
