--- a/specialNeeds.html
+++ b/specialNeeds.html
@@ -16,8 +16,8 @@
         <li><a href="home.html">Home</a></li>
         <li><a href="index.html">About us</a></li>
         <li><a href="ourProgrammes.html">Our programs</a></li>
-        <li><a href="ourServices.html">Services</a></li>
-        <li><a href="contact.html">Contact us</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="new.html">Contact us</a></li>
       </ul>
     </nav>
   </header>
@@ -57,10 +57,10 @@
       <blockquote>“The staff is incredibly caring and knowledgeable. Our child has made amazing progress!” — Rachid M.</blockquote>
     </section>
   </main>
-  <footer class="footer">
+    <footer class="footer">
     <div class="footer-left">
       <div class="logo-search">
-        <img src="poodv.png" alt="Pooh logo" class="pooh-logo" />
+        <img src="Group 6.png" alt="Pooh logo" class="pooh-logo" />
         <input type="text" placeholder="Search anything" class="search-input" />
         <button class="search-btn">➜</button>
       </div>
@@ -72,24 +72,24 @@
     </div>
   
     <div class="footer-center">
-      <h3>Services</h3>
+      <h3 id="service"></h3>
     </div>
   
     <div class="footer-contact">
-      <h3>Contact</h3>
-      <p>📍 Algeria/Algiers</p>
-      <p>✉️ Contact@Winnei’sgarden.com</p>
-      <p>📞 +213 673821375</p>
+      <h3 id="sth">Contact</h3>
+      <p><img src="home.png" alt="">   Algeria/Algiers</p>
+      <p><img src="mail.png" alt="">   Contact@Winnei’sgarden.com</p>
+      <p><img src="phone.png" alt="">   +213 673821375</p>
     </div>
   
     <div class="footer-socials">
-      <h3>Socials</h3>
+      <h3 id="service">Socials</h3>
       <p>join us</p>
       <div class="social-icons">
-        <i class="fa fa-facebook"></i>
-        <i class="fa fa-instagram"></i>
-        <i class="fa fa-times"></i>
-        <i class="fa fa-linkedin"></i>
+        <i><img src="Facebook.png" alt=""></i>
+        <i><img src="insta.png" alt=""></i>
+        <i><img src="X.png" alt=""></i>
+        <i><img src="Linked.png" alt=""></i>
       </div>
     </div>
   </footer>
